[project]
name = "ballroomify"
version = "0.0.0"
description = "toy library to ballroomify everything"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "ballroom",
    "dance",
]
authors = [
    { name = "Kateryna Morhun", email = "kmorhun@mit.edu" },
]
maintainers = [
    { name = "Kateryna Morhun", email = "kmorhun@mit.edu" }
]
classifiers = [
    "Programming Language :: Python :: 3.10",
]
dynamic = ["dependencies"]

[project.urls]
repository = "https://github.com/kmorhun/ballroomify"
documentation = "https://ballroomify.readthedocs.io/en/latest/?badge=latest"
issue-tracker = "https://github.com/kmorhun/ballroomify/issues"

[project.optional-depedencies]
doc = [
    "sphinx~=4.2.0",
    "myst-parser",
]